--- a/datathon-notebooks/01 - Check setup.ipynb
+++ b/datathon-notebooks/01 - Check setup.ipynb
@@ -11,9 +11,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python version is fine!\n",
+      "tensorflow: 1.12.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "keras: 2.2.4\n",
+      "matplotlib: 2.2.2\n",
+      "PIL: 5.3.0\n",
+      "numpy: 1.15.4\n",
+      "Success! You are on a very good way!\n"
+     ]
+    }
+   ],
    "source": [
     "# Ignore warnings.\n",
     "import warnings\n",
@@ -61,9 +88,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Available GPUs: ['/device:GPU:0']\n",
+      "Looks good! You got access to a GPU.\n"
+     ]
+    }
+   ],
    "source": [
     "from tensorflow.python.client import device_lib\n",
     "\n",
@@ -101,7 +137,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
