--- a/datathon-notebooks/05 - Train PointNet.ipynb
+++ b/datathon-notebooks/05 - Train PointNet.ipynb
@@ -13,9 +13,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Once deleted, variables cannot be recovered. Proceed (y/[n])? y\n"
+     ]
+    }
+   ],
    "source": [
     "%reset\n",
     "import sys\n",
@@ -37,19 +45,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using dataset path ../../data/preprocessed/2018_10_31_14_19_42\n"
+     ]
+    }
+   ],
    "source": [
     "from cgmcore.preprocesseddatagenerator import get_dataset_path\n",
     "#dataset_path = \"../../data/preprocessed/2018_07_31_10_52\"\n",
-    "dataset_path = \"../../preprocessed_trimmed/2018_07_31_10_52\"\n",
+    "dataset_path = \"../../data/preprocessed/2018_10_31_14_19_42\"\n",
     "print(\"Using dataset path\", dataset_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,9 +103,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating data-generator...\n"
+     ]
+    }
+   ],
    "source": [
     "from cgmcore.preprocesseddatagenerator import create_datagenerator_from_parameters\n",
     "\n",
@@ -114,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,9 +198,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input-shape: (100, 1000, 3)\n",
+      "Output-shape: (100, 1)\n"
+     ]
+    }
+   ],
    "source": [
     "train_x, train_y = next(generator_pointclouds_train)\n",
     "print(\"Input-shape:\", train_x.shape)\n",
@@ -194,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,11 +254,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "input_1 (InputLayer)         (None, 1000, 3)           0         \n",
+      "_________________________________________________________________\n",
+      "lambda_1 (Lambda)            (None, 1000, 3)           0         \n",
+      "_________________________________________________________________\n",
+      "conv1d_4 (Conv1D)            (None, 1000, 64)          256       \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_6 (Batch (None, 1000, 64)          256       \n",
+      "_________________________________________________________________\n",
+      "conv1d_5 (Conv1D)            (None, 1000, 64)          4160      \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_7 (Batch (None, 1000, 64)          256       \n",
+      "_________________________________________________________________\n",
+      "lambda_2 (Lambda)            (None, 1000, 64)          0         \n",
+      "_________________________________________________________________\n",
+      "conv1d_9 (Conv1D)            (None, 1000, 64)          4160      \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_13 (Batc (None, 1000, 64)          256       \n",
+      "_________________________________________________________________\n",
+      "conv1d_10 (Conv1D)           (None, 1000, 128)         8320      \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_14 (Batc (None, 1000, 128)         512       \n",
+      "_________________________________________________________________\n",
+      "conv1d_11 (Conv1D)           (None, 1000, 1024)        132096    \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_15 (Batc (None, 1000, 1024)        4096      \n",
+      "_________________________________________________________________\n",
+      "max_pooling1d_3 (MaxPooling1 (None, 1, 1024)           0         \n",
+      "_________________________________________________________________\n",
+      "dense_7 (Dense)              (None, 1, 64)             65600     \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_16 (Batc (None, 1, 64)             256       \n",
+      "_________________________________________________________________\n",
+      "dropout_1 (Dropout)          (None, 1, 64)             0         \n",
+      "_________________________________________________________________\n",
+      "dense_8 (Dense)              (None, 1, 1)              65        \n",
+      "_________________________________________________________________\n",
+      "flatten_1 (Flatten)          (None, 1)                 0         \n",
+      "=================================================================\n",
+      "Total params: 220,289\n",
+      "Trainable params: 217,473\n",
+      "Non-trainable params: 2,816\n",
+      "_________________________________________________________________\n",
+      "Epoch 1/15\n",
+      "20/20 [==============================] - 108s 5s/step - loss: 6826.5017 - mean_absolute_error: 82.0039 - val_loss: 6315.5145 - val_mean_absolute_error: 78.9264\n",
+      "Epoch 2/15\n",
+      "20/20 [==============================] - 94s 5s/step - loss: 5825.6534 - mean_absolute_error: 75.6726 - val_loss: 5895.0884 - val_mean_absolute_error: 76.2536\n",
+      "Epoch 3/15\n",
+      "20/20 [==============================] - 87s 4s/step - loss: 3095.6190 - mean_absolute_error: 53.7172 - val_loss: 1919.0154 - val_mean_absolute_error: 43.1850\n",
+      "Epoch 4/15\n",
+      "20/20 [==============================] - 80s 4s/step - loss: 824.5864 - mean_absolute_error: 24.1849 - val_loss: 553.3714 - val_mean_absolute_error: 22.4221\n",
+      "Epoch 5/15\n",
+      "20/20 [==============================] - 75s 4s/step - loss: 470.1241 - mean_absolute_error: 17.3182 - val_loss: 521.2467 - val_mean_absolute_error: 20.8476\n",
+      "Epoch 6/15\n",
+      "20/20 [==============================] - 75s 4s/step - loss: 436.8207 - mean_absolute_error: 16.7050 - val_loss: 239.6590 - val_mean_absolute_error: 14.0080\n",
+      "Epoch 7/15\n",
+      "20/20 [==============================] - 77s 4s/step - loss: 417.7346 - mean_absolute_error: 16.3531 - val_loss: 263.2206 - val_mean_absolute_error: 14.6484\n",
+      "Epoch 8/15\n",
+      "20/20 [==============================] - 77s 4s/step - loss: 403.7074 - mean_absolute_error: 16.0806 - val_loss: 175.3064 - val_mean_absolute_error: 11.6149\n",
+      "Epoch 9/15\n",
+      "20/20 [==============================] - 74s 4s/step - loss: 402.1686 - mean_absolute_error: 16.2496 - val_loss: 131.5799 - val_mean_absolute_error: 9.8195\n",
+      "Epoch 10/15\n",
+      "20/20 [==============================] - 77s 4s/step - loss: 371.9221 - mean_absolute_error: 15.3464 - val_loss: 247.9753 - val_mean_absolute_error: 14.2235\n",
+      "Epoch 11/15\n",
+      "20/20 [==============================] - 76s 4s/step - loss: 368.0442 - mean_absolute_error: 15.2947 - val_loss: 201.0325 - val_mean_absolute_error: 12.5551\n",
+      "Epoch 12/15\n",
+      "20/20 [==============================] - 73s 4s/step - loss: 359.1765 - mean_absolute_error: 14.9985 - val_loss: 208.4190 - val_mean_absolute_error: 12.6443\n",
+      "Epoch 13/15\n",
+      "20/20 [==============================] - 75s 4s/step - loss: 352.2561 - mean_absolute_error: 14.9824 - val_loss: 266.1584 - val_mean_absolute_error: 14.4883\n",
+      "Epoch 14/15\n",
+      "20/20 [==============================] - 76s 4s/step - loss: 364.5183 - mean_absolute_error: 15.2202 - val_loss: 144.0961 - val_mean_absolute_error: 10.3099\n",
+      "Epoch 15/15\n",
+      "20/20 [==============================] - 76s 4s/step - loss: 336.7629 - mean_absolute_error: 14.7906 - val_loss: 73.2454 - val_mean_absolute_error: 6.9769\n"
+     ]
+    }
+   ],
    "source": [
     "from cgmcore import modelutils\n",
     "from keras import optimizers\n",
@@ -253,13 +375,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['loss', 'mean_absolute_error']\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "evaluate_generator() got an unexpected keyword argument 'nb_workers'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-21-e305d712aa7b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mmodel_pointnet\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict_generator\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgenerator_pointclouds_test\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0msteps\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel_pointnet\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmetrics_names\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mmodel_pointnet\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mevaluate_generator\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgenerator_pointclouds_test\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0msteps\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0muse_multiprocessing\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mnb_workers\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/anaconda3/envs/cgm/lib/python3.6/site-packages/keras/legacy/interfaces.py\u001b[0m in \u001b[0;36mwrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     89\u001b[0m                 warnings.warn('Update your `' + object_name + '` call to the ' +\n\u001b[1;32m     90\u001b[0m                               'Keras 2 API: ' + signature, stacklevel=2)\n\u001b[0;32m---> 91\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     92\u001b[0m         \u001b[0mwrapper\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_original_function\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     93\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mwrapper\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: evaluate_generator() got an unexpected keyword argument 'nb_workers'"
+     ]
+    }
+   ],
    "source": [
     "model_pointnet.predict_generator(generator_pointclouds_test,steps=10)\n",
     "print(model_pointnet.metrics_names)\n",
-    "model_pointnet.evaluate_generator(generator_pointclouds_test,steps=100,use_multiprocessing=True)\n"
+    "model_pointnet.evaluate_generator(generator_pointclouds_test,steps=100,use_multiprocessing=False,nb_workers=1)\n"
    ]
   },
   {
@@ -273,9 +415,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saving model and history...\n",
+      "WARNING! Failed to save model. Use model-weights instead.\n",
+      "Saved model weights to./20181209-0150-pointnet-model-weights.h5\n",
+      "Saved training details to./20181209-0150-pointnet-details.p\n",
+      "Saved history to./20181209-0150-pointnet-history.p\n"
+     ]
+    }
+   ],
    "source": [
     "output_path = \".\"\n",
     "\n",
@@ -306,7 +460,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
